Fix overflow setting for footnotes

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -213,5 +213,5 @@ figcaption {
 }
 
 .footnotes {
-    word-break: break-all;
+    overflow: hidden;
 }
